--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,38 @@
 <resources>
     <string name="app_name">JagerGame</string>
     <string name="balance_title">Duel d\'équilibre</string>
+    <string name="title_activity_message" translatable="false">MessageActivity</string>
+    <string name="title_activity_server_init" translatable="false">ServerInitActivity</string>
+    <string name="title_activity_client_init" translatable="false">ClientInitActivity</string>
+    <string name="client">Client</string>
+    <string name="server">Server</string>
+    <string name="send">Send</string>
+    <string name="title_activity_fishing" translatable="false">Fishing</string>
+    <string name="fishing">Fishing</string>
+    <string name="title_activity_score" translatable="false">Score</string>
+    <string name="messages">Messages</string>
+    <string name="dancing">Dancing</string>
+    <string name="title_activity_driving" translatable="false">Driving</string>
+    <string name="title_activity_tic_tac_toe" translatable="false">TicTacToe</string>
+    <string name="start_as">Start as…</string>
+    <string name="_2_joueurs">2 Players</string>
+    <string name="_1_joueur">1 Player</string>
+    <string name="continuer">Continue</string>
+    <string name="play">Play</string>
+    <string name="training">Training</string>
+    <string name="multiplayer">Multiplayer</string>
+    <string name="solo">Solo</string>
+    <string name="a_parentheses_b">%1$s (%2$s)</string>
+    <string name="letsgo">Let\'s go!</string>
+    <string name="dancing_instructions">Swipe in the direction of the arrows on the screen!</string>
+    <string name="fishing_instructions">On long vibrations, move your phone up to catch the fish!</string>
+    <string name="driving_instructions">Move the butterfly toward the flowers by tilting your phone!</string>
+    <string name="target">GhostBuster</string>
+    <string name="target_instructions">Touch the ghost before it disappear!</string>
+    <string name="tictactoe_instructions">Place 3 of your symbols in a line before your opponent!</string>
+    <string name="tictactoe">TicTacToe</string>
+    <string name="feed">Feed the Cat</string>
+    <string name="feed_instructions">Feed the cat yummy things by choosing the right food!</string>
+    <string name="driving">Butterfly</string>
+    <string name="waiting">Waiting for other player...</string>
 </resources>
